--- a/templates/recipe-search.html
+++ b/templates/recipe-search.html
@@ -5,7 +5,7 @@
     <form action="" id="recipe-search">
       <div>
         <label for="search">Search:</label>
-        <input id="author" type="text" placeholder="Search" />
+        <input id="adv-search" type="text" placeholder="Search" />
       </div>
 
       <div>
@@ -15,6 +15,10 @@
       <div>
         <label for="excludeIngredients">Must exclude:</label>
         <input id="excludeIngredients" type="text" placeholder="..." />
+      </div>
+      <div>
+        <label for="cookTime">Max Cooking Time (minutes):</label>
+        <input id="cooktime" type="number" placeholder="..." />
       </div>
       <div>
         <div>Allergens/Intolerances (optional):</div>
