--- a/templates/home-anon.html
+++ b/templates/home-anon.html
@@ -3,6 +3,6 @@
   <h1>Meal Planner</h1>
   <h4>New here?</h4>
   <p>Sign up now to start streamlining your meal planning and grocery trips!</p>
-  <a href="/signup" class="btn btn-primary">Sign up</a>
+  <a href="/user/signup" class="btn btn-primary">Sign up</a>
 </div>
 {% endblock %}
