--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
             <a class="nav-link" href="/user/logout">Log Out</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/edit">Edit Profile <Inp></Inp></a>
+            <a class="nav-link" href="/user/profile">Profile <Inp></Inp></a>
           </li>
           {% endif %}
         </ul>
