added footer. working on add to meal plan feature

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,10 +4,6 @@ body {
   background-color: #e6ecf0;
 }
 
-body.error-404 {
-  background-color: #1da1f2;
-}
-
 .form-control {
   margin-bottom: 20px;
 }
@@ -20,9 +16,14 @@ body.error-404 {
   cursor: pointer;
 }
 
+/* ======================= Footer */
+.footer-logo {
+  height: 1.5rem;
+}
+
 /* ======================= Nav */
 
-.navbar {
+/* .navbar {
   background-color: #fff;
   height: 46px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
@@ -101,14 +102,14 @@ nav form.navbar-form {
 #search:focus {
   box-shadow: none;
   border: 2px solid #007bff;
-}
+} */
 
 /* on "onboarding" pages (signup & login), the navbar is
      different: no search box, the logo is centered, and it has
      a background color.
    */
 
-.onboarding > .navbar {
+/* .onboarding > .navbar {
   background-image: url("/static/images/nav-bg.png");
   background-size: 100% 100%;
 }
@@ -150,10 +151,10 @@ nav form.navbar-form {
 
 nav + .container {
   margin-bottom: 1rem;
-}
+} */
 
 /* ===================== User profile */
-
+/* 
 .join-message {
   margin-top: 100px;
 }
@@ -299,10 +300,10 @@ nav + .container {
 
 .user-location {
   color: #657786;
-}
+} */
 
 /* ==================== User cards on follower/following pages */
-
+/* 
 .user-card {
   width: 100%;
   padding-bottom: 100%;
@@ -381,10 +382,10 @@ nav + .container {
 
 p.card-bio {
   margin: 2em 10px 0;
-}
+} */
 
 /* ============================ Signed out home */
-
+/* 
 .home-hero {
   height: 100vh;
   display: flex;
@@ -425,10 +426,10 @@ p.card-bio {
   bottom: 0;
   background: rgba(255, 255, 255, 0.3);
 }
-
+ */
 /* ============================== Signed in Home */
 
-#home-aside > .user-card {
+/* #home-aside > .user-card {
   margin-top: 0;
   overflow: hidden;
 }
@@ -461,19 +462,19 @@ p.card-bio {
 
 #home-aside .stat h4 {
   text-align: left;
-}
+} */
 
 /* ========================== Signup/Login */
 
-#user_form input.form-control {
+/* #user_form input.form-control {
   font-size: 18px;
   font-weight: bold;
   padding: 12px;
-}
+} */
 
 /* =========================== Edit Page */
 
-.edit-btn-area {
+/* .edit-btn-area {
   display: flex;
   justify-content: space-between;
 }
@@ -481,10 +482,10 @@ p.card-bio {
 .edit-btn-area > .btn {
   width: 48%;
 }
-
+ */
 /* =========================== Message Show page */
 
-.bg {
+/* .bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -520,24 +521,4 @@ p.card-bio {
   line-height: 32px;
   letter-spacing: 0.01em;
   margin-bottom: 10px;
-}
-
-/* ================================ 404 page */
-
-.message-404 {
-  color: white;
-  margin-top: 2em;
-  text-align: center;
-}
-
-.message-404 a {
-  color: white;
-}
-
-.message-404 > h4.display-4 {
-  font-size: 2.5em;
-}
-
-.message-404 .form-inline input {
-  flex: 1;
-}
+} */
