--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -13,7 +13,14 @@
           <a href="/recipe/{{item.id}}" class="btn btn-primary"
             >Get more information</a
           >
-          <a href="#" class="btn btn-secondary">Add to meal plan</a>
+          <a
+            href="#"
+            class="btn btn-secondary add-meal-plan"
+            data-id="{{item.id}}"
+            data-title="{{item.title}}"
+            data-image="{{item.image}}"
+            >Add to meal plan</a
+          >
         </div>
       </div>
     </div>
