--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,13 @@ body {
   cursor: pointer;
 }
 
+footer {
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+}
+
 /* ======================= Footer */
 .footer-logo {
   height: 1.5rem;
