--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,20 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="static/script.js"></script>
+    <script
+      type="text/javascript"
+      href="{{ url_for('static', filename='script.js') }}"
+    ></script>
 
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
-    <link rel="stylesheet" href="static/styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
   </head>
 
   <body>
@@ -96,7 +103,6 @@
             class="footer-logo"
             src="/static/images/spoonacular.svg"
             alt=""
-            style="height: 2rem;"
           />
           Spoonacular API</a
         >
