able to save recipe to db

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
     ></script>
     <script
       type="text/javascript"
+      href="{{ url_for('static', filename='api.js') }}"
+    ></script>
+    <script
+      type="text/javascript"
       href="{{ url_for('static', filename='script.js') }}"
     ></script>
 
