--- a/static/styles.css
+++ b/static/styles.css
@@ -28,6 +28,16 @@ footer {
   height: 1.5rem;
 }
 
+/* ======================= Recipes */
+.add-recipe {
+  background-color: #546e7a;
+  color: #ffffff;
+}
+
+.remove-recipe {
+  background-color: #29434e;
+  color: #ffffff;
+}
 /* ======================= Nav */
 
 /* .navbar {
