linked up javascript file updated requirements.txt

--- a/static/styles.css
+++ b/static/styles.css
@@ -35,7 +35,8 @@ footer {
 }
 
 .remove-recipe {
-  background-color: #29434e;
+  /* background-color: #29434e; */
+  background-color: darkmagenta;
   color: #ffffff;
 }
 /* ======================= Nav */
