--- a/templates/recipe-info.html
+++ b/templates/recipe-info.html
@@ -24,7 +24,7 @@
 
 <div class="container">
   <h3>Similar Recipe Ideas:</h3>
-  <div class="container">
+  <div class="container recipe-cards">
     <div class="row">
       {% for recipe in similar %}
       <div class="card col-sm-4 col-md-3 m-2">
