--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -8,7 +8,7 @@
       <div class="card">
         <img class="card-img-top" src="{{item.image}}" alt="{{item.title}}" />
         <div class="card-body">
-          <h5 class="card-title">{{item.title}}</h5>
+          <h5 class="card-header">{{item.title}}</h5>
 
           <a href="/recipe/{{item.id}}" class="btn btn-primary m-1"
             >Get more information</a
