--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
       <div class="alert alert-{{ category }}">{{ message }}</div>
       {% endfor %} {% block content %} {% endblock %}
     </div>
-    <footer class="mt-3">
+    <footer>
       <div class="text-center py-1">
         Powered by
         <a href="https://spoonacular.com/food-api">
