--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -1,28 +1,30 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Sign Up</h1>
-<div class="container">
-  <form method="POST">
-    {{ form.hidden_tag() }}
-    <!--  -->
-    {% for field in form if field.widget.input_type != 'hidden' %}
-    <!--  -->
-    {% for error in field.errors %}
-    <span class="text-danger">{{ error }}</span>
-    {% endfor %}
-    <!--  -->
-    {% if field.label.text =='Allergens/Intolerances' %}
-    <!--  -->
-    {{field.label}} {{ field(placeholder="ex. eggs, dairy, shellfish, gluten",
-    class="form-control") }}
-    <!--  -->
-    {% else %} {{field.label}} {{field(class="form-control")}}
+<div class="content">
+  <h1>Sign Up</h1>
+  <div class="container">
+    <form method="POST">
+      {{ form.hidden_tag() }}
+      <!--  -->
+      {% for field in form if field.widget.input_type != 'hidden' %}
+      <!--  -->
+      {% for error in field.errors %}
+      <span class="text-danger">{{ error }}</span>
+      {% endfor %}
+      <!--  -->
+      {% if field.label.text =='Allergens/Intolerances' %}
+      <!--  -->
+      {{field.label}} {{ field(placeholder="ex. eggs, dairy, shellfish, gluten",
+      class="form-control") }}
+      <!--  -->
+      {% else %} {{field.label}} {{field(class="form-control")}}
 
-    <!--  -->
-    {% endif %}
-    <!--  -->
-    {% endfor %}
+      <!--  -->
+      {% endif %}
+      <!--  -->
+      {% endfor %}
 
-    <button class="btn btn-primary btn-lg btn-block mt-2">Sign me up!</button>
-  </form>
+      <button class="btn btn-lg btn-block mt-2">Sign me up!</button>
+    </form>
+  </div>
 </div>
 {% endblock %}
