updating some styles and went back a revision

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Meal Planner</title>
+    <title>Recipe Box</title>
 
     <link
       rel="stylesheet"
@@ -14,16 +14,10 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
-    <!-- <script
-      src="https://pagecdn.io/lib/bootstrap/4.5.1/js/bootstrap.min.js"
-      crossorigin="anonymous"
-      integrity="sha256-0IiaoZCI++9oAAvmCb5Y0r93XkuhvJpRalZLffQXLok="
-    ></script> -->
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
-    <!-- <script type="text/javascript" src="/static/api.js"></script>
-    <script type="text/javascript" src="./static/script.js"></script> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
