--- a/templates/recipe-info.html
+++ b/templates/recipe-info.html
@@ -34,7 +34,7 @@
           <p class="card-text">
             <a href="{{recipe.sourceUrl}}">See the original </a>
           </p>
-          <a href="/recipe/{{recipe.id}}" class="btn btn-primary m-1"
+          <a href="/recipe/{{recipe.id}}" class="btn m-1"
             >Get more information</a
           >
           {% if g.user %}
