--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -13,6 +13,6 @@
   <!--  -->
   {% endfor %}
 
-  <button class="btn btn-primary btn-lg btn-block mt-2">Log In</button>
+  <button class="btn btn-lg btn-block mt-2">Log In</button>
 </form>
 {% endblock %}
