--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -10,9 +10,7 @@
         <div class="card-body">
           <h5 class="card-header">{{item.title}}</h5>
 
-          <a href="/recipe/{{item.id}}" class="btn btn-primary m-1"
-            >Get more information</a
-          >
+          <a href="/recipe/{{item.id}}" class="btn m-1">Get more information</a>
           {% if g.user %}
           <div class="btn btn-secondary add-recipe m-1" data-id="{{item.id}}">
             Save recipe
