--- a/templates/user/edit-user.html
+++ b/templates/user/edit-user.html
@@ -14,7 +14,7 @@
     <!--  -->
     {% endfor %}
 
-    <button class="btn btn-primary btn-lg btn-block mt-2">
+    <button class="btn btn-lg btn-block mt-2">
       Submit changes
     </button>
   </form>
