--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -11,8 +11,8 @@
     </div>
     <div class="col-md-6">
       <h3>Actions</h3>
-      <a href="/user/edit">Edit profile</a> <br />
-      <a href="/user/delete">Delete profile</a>
+      <a href="/user/edit" class="btn">Edit profile</a> <br />
+      <a href="/user/delete" class="btn btn-danger">Delete profile</a>
     </div>
   </div>
 </div>
